--- a/views/accounts/profile.ejs
+++ b/views/accounts/profile.ejs
@@ -1,5 +1,6 @@
 <% layout('boilerplate') %>
 
+<div class="container">
 <% if (message.length > 0) {%>
     <div class="alert alert-success alert-dismissible">
         <button class="close" type="button" data-dismiss="alert" aria-label="Close">
@@ -14,3 +15,5 @@
 <p><%= user.profile.name %></p>
 
 <img src="<%= user.profile.picture %>"/>
+
+</div>
