--- a/views/courses/courseDesc.ejs
+++ b/views/courses/courseDesc.ejs
@@ -5,8 +5,14 @@
         <div class="row">
             <div class="col-lg-6 col-md-offset-3">
                 <form action="/payment" method="POST">
-                    <script>
-                    
+                    <input type="hidden" name="courseId" value="<%= course._id %>"/>
+                    <script src="https://checkout.stripe.com/checkout.js" class="stripe-button">
+                        data-key=""
+                        data-amount="<%= course.price %>"
+                        data-name= "Stripe.com"
+                        data-description="Widget"
+                        data-image="",
+                        data-locale="auto">
                     </script>
                 </form>
             </div>
@@ -21,7 +27,20 @@
         <div class="col-lg-5">
             <h2>Enrolled Students</h2>
             <div class="panel panel-default">
-                
+                <div class="panel-heading">
+                    Students
+                </div>
+                <div class="panel-body">
+                    <% if (course.ownByStudent.length == 0)) { %>
+                        <p>0</p>    
+                    <% } else { %>
+                        <% for (var i = 0; i < course.ownByStudent.length; i++) {%>
+                            <div class="col-xs-2">
+                                <img src="course.ownByStudent[i].user.profile.picture %>" />
+                            </div>
+                        <% } %>
+                    <% } %>
+                </div>
             </div>
         </div>
     </div>
