--- a/views/boilerplate.ejs
+++ b/views/boilerplate.ejs
@@ -5,9 +5,9 @@
     </head>
 
     <body>
-        <% include ./partials/navbar%> 
+        <% include ./partials/navbar %> 
         
-        <%- body -%>
+        <% body %>
         
         <% include ./partials/javascript %> 
     </body>
