troubleshooting and finished

--- a/views/boilerplate.ejs
+++ b/views/boilerplate.ejs
@@ -7,9 +7,11 @@
     <body>
         <% include ./partials/navbar %> 
         
-        <% body %>
+        <%- body -%>
+        
+        <% include ./partials/footer %> 
         
         <% include ./partials/javascript %> 
     </body>
-    <% include ./partials/footer %> 
+    
 </html>
