--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -1,5 +1,5 @@
 .bg {
-  /*background: url('https://static.pexels.com/photos/425/apple-iphone-desk-office.jpg') no-repeat center center;*/
+  background: url('https://static.pexels.com/photos/425/apple-iphone-desk-office.jpg') no-repeat center center;
   position: fixed;
   width: 100%;
   height: 350px; /*same height as jumbotron */
